<resources>
  <string name="app_name">Codebreaker</string>
  <string name="title_home">Game</string>
  <string name="title_summary">Summary</string>
  <string name="title_scores">Top Scores</string>
  <string name="submit_text">Submit</string>
  <string name="guess_hint">Text of guess</string>
  <string name="new_game_title">New game</string>

  <string name="color_chars">ROYGBIV</string>
  <string name="guess_number">Guess number</string>
  <string name="exact_matches">Exact Matches</string>
  <string name="near_matches">Near Matches</string>

  <string name="code_length_pref_key">code_length_pref</string>

  <string name="code_length_pref_title">Code length</string>
  <string name="settings_title">Settings</string>
  <string name="login_failure_message">Unable to sign in with provided credentials</string>
  <string name="display_name_format">Signed in as %s</string>
  <string name="sign_out">Sign out</string>
  <string name="code_length_label">Code length</string>
  <string name="guesses_label">Guesses</string>
  <string name="time_label">Time</string>
  <string name="average_label">Average:</string>
  <string name="maximum_label">Maximum:</string>
  <string name="minimum_label">Minimum:</string>
  <string name="count_games_label">Total games played:</string>

  <string name="mmss_format">%1$02d:%2$02d</string>
  <string name="avg_guess_format">%3.1f</string>
  <string name="date_time_order_format">%1$s %2$s</string>

  <string-array name="color_labels">
    <item>Red</item>
    <item>Orange</item>
    <item>Yellow</item>
    <item>Green</item>
    <item>Blue</item>
    <item>Indigo</item>
    <item>Violet</item>
  </string-array>
</resources>
