<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_play">

  <fragment
    android:id="@+id/navigation_play"
    android:label="@string/title_home"
    android:name="edu.cnm.deepdive.codebreaker.controller.GameFragment"
    tools:layout="@layout/fragment_game"/>

  <fragment
    android:id="@+id/navigation_summary"
    android:label="@string/title_summary"
    android:name="edu.cnm.deepdive.codebreaker.controller.SummaryFragment"
    tools:layout="@layout/fragment_summary"/>

  <fragment
    android:id="@+id/navigation_notifications"
    android:label="@string/title_scores"
    android:name="edu.cnm.deepdive.codebreaker.controller.ui.notifications.NotificationsFragment"
    tools:layout="@layout/fragment_notifications"/>
</navigation>